# xwebview

./: CMakeLists.txt  README.md
cmake/: NlohmannJSON.cmake  PlatformWebview.cmake
documentation/: CMakeLists.txt  conf.py
examples/: CMakeLists.txt
examples/source/: main.cpp
include/xwebview/: types.h  webview.h  window.h  xwebview.h
source/: window.cpp
source/windows/: webview.cpp  webview_impl.h  window.cpp  window_impl.h  window_windows.cpp  window_windows.impl.hpp  xwebview_windows.cpp
test/: CMakeLists.txt
